# Two-Eight-Nine-Labs

./: .gitignore  .gitmodules
Week 1/: CMakeLists.txt  OFF_IO.c  OFF_IO.h  file_IO.c  main.c  meson.build  types.h
Week 1/data/: test.txt
Week 1/test/: test_cases.c  test_cases.h  test_main.c
Week 2/: CMakeLists.txt  OFF_IO.c  OFF_IO.h  main.c  math_operations.c  math_operations.h  math_types.h  types.h
Week 3/: CMakeLists.txt  main.c
Week 3/lib/: CMakeLists.txt
Week 3/src/: CMakeLists.txt
Week 3/src/Camera/: CMakeLists.txt
Week 3/src/IO/: CMakeLists.txt  file_IO.c  file_IO.h
Week 3/src/Math/: CMakeLists.txt  matrices.h  matrix_operations.c  matrix_operations.h  vector_operations.c  vector_operations.h  vectors.h
Week 3/src/OFF/: CMakeLists.txt  OFF.c  OFF.h
